force-app/main/default/objects/Invoice__c/fields/Account_CC__c.field-meta.xml
<CustomField>
    <fullName>Account_CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (CC to)</relationshipLabel>
    <relationshipName>InvoicesCC</relationshipName>
    <type>Lookup</type>
</CustomField>