force-app/main/default/objects/Invoice__c/fields/Age_of_Job_Completion_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Job_Completion_to_Invoice__c</fullName>
    <formula>Due_Date__c - Job_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Job Completion to Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>