force-app/main/default/objects/Invoice__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>Field populated by Invoice Approval Process field update to indicate the user that approved the record</description>
    <label>Approved By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>