force-app/main/default/objects/Invoice__c/fields/BigTimeSID__c.field-meta.xml
<CustomField>
    <fullName>BigTimeSID__c</fullName>
    <externalId>true</externalId>
    <label>BigTimeSID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>