force-app/main/default/objects/Invoice__c/fields/Bill_To_Address1__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address1__c</fullName>
    <label>Bill To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>