force-app/main/default/objects/Invoice__c/fields/Bill_To_Address3__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Address</label>
    <referenceTo>Billing_Address__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>