force-app/main/default/objects/Invoice__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <formula>Bill_To__r.BillingStreet &amp;  BR() &amp;  Bill_To__r.BillingCity  &amp; &apos;, &apos; &amp;  Bill_To__r.BillingState &amp; &apos; &apos; &amp;  Bill_To__r.BillingPostalCode</formula>
    <label>Bill To Address</label>
    <type>Text</type>
</CustomField>