force-app/main/default/objects/Invoice__c/fields/Bill_To_Attention__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attention__c</fullName>
    <label>Bill To Attention Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>