force-app/main/default/objects/Invoice__c/fields/Bill_To_Attention_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attention_Line_2__c</fullName>
    <description>Bill To Attention Line 2-- to allow for wrapping of text on PDF document for long Bill to Attention</description>
    <label>Bill To Attention Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>