force-app/main/default/objects/Invoice__c/fields/Bill_To_Attention_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attention_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to indicate the Bill to Attention on the Invoice record.  This field is mapped to the Waiver/Letter VF page and Waiver/Letter Conga templates.</description>
    <label>Bill To Attention Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Bill To Attention Lookup)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>