force-app/main/default/objects/Invoice__c/fields/Bill_to_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_City__c</fullName>
    <formula>Bill_To__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to City</label>
    <type>Text</type>
</CustomField>