force-app/main/default/objects/Invoice__c/fields/Bill_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email__c</fullName>
    <description>When an invoice is finalized and the job has a national account listed, this will copy the email from the account.</description>
    <label>Bill To Email</label>
    <type>Email</type>
</CustomField>