force-app/main/default/objects/Invoice__c/fields/Bill_To_for_Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_for_Conga_Template__c</fullName>
    <formula>IF(OR(Bill_To__r.IsPersonAccount=TRUE, Omit_Bill_To__c=TRUE),&quot;&quot;, Bill_To__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To for Conga Template</label>
    <type>Text</type>
</CustomField>