force-app/main/default/objects/Invoice__c/fields/Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_State__c</fullName>
    <formula>Bill_To__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to State</label>
    <type>Text</type>
</CustomField>