force-app/main/default/objects/Invoice__c/fields/Bill_to_Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Tax_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Billing Tax Group</inlineHelpText>
    <label>Bill to Tax Group</label>
    <referenceTo>Tax_Group__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>