force-app/main/default/objects/Invoice__c/fields/Bill_to_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Zip__c</fullName>
    <formula>Bill_To__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Zip</label>
    <type>Text</type>
</CustomField>