force-app/main/default/objects/Invoice__c/fields/Billing_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Billing_Requirement__c</fullName>
    <description>Billing note from Account will populate upon saved.</description>
    <label>Billing Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>