force-app/main/default/objects/Invoice__c/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Care Of)</relationshipLabel>
    <relationshipName>Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>