force-app/main/default/objects/Invoice__c/fields/Care_of_Address1__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Address1__c</fullName>
    <label>Care of Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>