force-app/main/default/objects/Invoice__c/fields/Care_Of_Address__c.field-meta.xml
<CustomField>
    <fullName>Care_Of_Address__c</fullName>
    <formula>Care_Of__r.BillingStreet &amp; BR() &amp; Care_Of__r.BillingCity &amp; &apos;, &apos; &amp; Care_Of__r.BillingState &amp; &apos; &apos; &amp; Care_Of__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Of Address</label>
    <type>Text</type>
</CustomField>