force-app/main/default/objects/Invoice__c/fields/Care_of_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Address_Formula__c</fullName>
    <description>Formula field to populate Care of Address onto the Invoice from Billing Address object.</description>
    <formula>Care_of_Address_lookup__r.Billing_Street__c  &amp; BR() &amp;  
Care_of_Address_lookup__r.Billing_City__c  &amp;
IF(ISBLANK( Care_of_Address_lookup__r.Billing_City__c ), &apos; &apos;, &apos;, &apos;) &amp;  
Care_of_Address_lookup__r.Billing_State__c  &amp; &apos; &apos; &amp;  
Care_of_Address_lookup__r.Billing_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care of Address</label>
    <type>Text</type>
</CustomField>