force-app/main/default/objects/Invoice__c/fields/Care_of_Address_lookup__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Address_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Billing Address object for the Care of Address</description>
    <label>Care of Address</label>
    <referenceTo>Billing_Address__c</referenceTo>
    <relationshipLabel>Invoices (Care of Address)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>