force-app/main/default/objects/Invoice__c/fields/Care_Of_Attention__c.field-meta.xml
<CustomField>
    <fullName>Care_Of_Attention__c</fullName>
    <label>Care Of Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>