force-app/main/default/objects/Invoice__c/fields/Care_Of_Email__c.field-meta.xml
<CustomField>
    <fullName>Care_Of_Email__c</fullName>
    <label>Care Of Email</label>
    <type>Email</type>
</CustomField>