force-app/main/default/objects/Invoice__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>