force-app/main/default/objects/Invoice__c/fields/CC_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (CC)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>