force-app/main/default/objects/Invoice__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <formula>CC_Account__r.BillingStreet &amp; BR() &amp; CC_Account__r.BillingCity &amp;  IF(OR(ISBLANK(CC_Account__r.BillingCity), ISBLANK(CC_Account__r.BillingState)), &apos; &apos;, &apos;, &apos;)  &amp; CC_Account__r.BillingState &amp;&quot; &quot;&amp; CC_Account__r.BillingPostalCode</formula>
    <label>CC Address</label>
    <type>Text</type>
</CustomField>