force-app/main/default/objects/Invoice__c/fields/CC_Address_Care_of_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Care_of_Formula__c</fullName>
    <description>Formula field on Invoice to display CC Address (Care of) from Billing Address object</description>
    <formula>CC_Address_Care_of_lookup__r.Billing_Street__c  &amp;  BR()&amp;
CC_Address_Care_of_lookup__r.Billing_City__c &amp; 
IF(ISBLANK(CC_Address_Care_of_lookup__r.Billing_Street__c), &apos; &apos;, &apos;, &apos;) &amp; 
CC_Address_Care_of_lookup__r.Billing_State__c &amp;&quot; &quot;&amp;  
CC_Address_Care_of_lookup__r.Billing_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Address (Care of)</label>
    <type>Text</type>
</CustomField>