force-app/main/default/objects/Invoice__c/fields/CC_Address_Care_of_lookup__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Care_of_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Billing Address object for CC Address (Care of)</description>
    <label>CC Address (Care of)</label>
    <referenceTo>Billing_Address__c</referenceTo>
    <relationshipLabel>Invoices (CC Address (Care of))</relationshipLabel>
    <relationshipName>Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>