force-app/main/default/objects/Invoice__c/fields/CC_Address_careOf__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_careOf__c</fullName>
    <formula>CC_CareOf__r.BillingStreet &amp; IF(OR(ISBLANK(CC_CareOf__r.BillingStreet), ISBLANK(CC_CareOf__r.BillingCity)), &apos; &apos;, &apos;, &apos;) &amp; CC_CareOf__r.BillingCity &amp;  IF(OR(ISBLANK(CC_CareOf__r.BillingCity), ISBLANK(CC_CareOf__r.BillingState)), &apos; &apos;, &apos;, &apos;)  &amp; CC_CareOf__r.BillingState &amp;&quot; &quot;&amp; CC_CareOf__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Address</label>
    <type>Text</type>
</CustomField>