force-app/main/default/objects/Invoice__c/fields/CC_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Formula__c</fullName>
    <description>Formula field for CC Address from Billing Address object to display on Invoice</description>
    <formula>CC_Address_Lookup__r.Billing_Street__c &amp; BR() &amp;  
CC_Address_Lookup__r.Billing_City__c  &amp; 
IF(ISBLANK( CC_Address_Lookup__r.Billing_City__c ), &apos; &apos;, &apos;, &apos;) &amp; 
CC_Address_Lookup__r.Billing_State__c  &amp;&quot; &quot;&amp;  
CC_Address_Lookup__r.Billing_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Address</label>
    <type>Text</type>
</CustomField>