force-app/main/default/objects/Invoice__c/fields/CC_Address_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Billing Address object for CC Address</description>
    <label>CC Address</label>
    <referenceTo>Billing_Address__c</referenceTo>
    <relationshipLabel>Invoices (CC Address)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>