force-app/main/default/objects/Invoice__c/fields/CC_Attention_CareOf__c.field-meta.xml
<CustomField>
    <fullName>CC_Attention_CareOf__c</fullName>
    <label>CC Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>