force-app/main/default/objects/Invoice__c/fields/CC_Attention_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Attention_Email__c</fullName>
    <label>CC Attention Email</label>
    <type>Email</type>
</CustomField>