force-app/main/default/objects/Invoice__c/fields/CC_City__c.field-meta.xml
<CustomField>
    <fullName>CC_City__c</fullName>
    <formula>CC_Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC City</label>
    <type>Text</type>
</CustomField>