force-app/main/default/objects/Invoice__c/fields/CC_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>CC_City_State_Zip__c</fullName>
    <formula>CC_Address_Lookup__r.Billing_City__c  &amp; IF( CC_Address_Lookup__r.Billing_City__c =&quot;&quot;,&quot;&quot;,&quot;, &quot;)&amp;  CC_Address_Lookup__r.Billing_State__c  &amp; &quot; &quot; &amp;  CC_Address_Lookup__r.Billing_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC City, State, Zip</label>
    <type>Text</type>
</CustomField>