force-app/main/default/objects/Invoice__c/fields/CC_Company__c.field-meta.xml
<CustomField>
    <fullName>CC_Company__c</fullName>
    <formula>CC_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Company</label>
    <type>Text</type>
</CustomField>