force-app/main/default/objects/Invoice__c/fields/CC_State__c.field-meta.xml
<CustomField>
    <fullName>CC_State__c</fullName>
    <formula>CC_Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC State</label>
    <type>Text</type>
</CustomField>