force-app/main/default/objects/Invoice__c/fields/CC_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Street_Address__c</fullName>
    <formula>CC_Address_Lookup__r.Billing_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Street Address</label>
    <type>Text</type>
</CustomField>