force-app/main/default/objects/Invoice__c/fields/CC_Zip__c.field-meta.xml
<CustomField>
    <fullName>CC_Zip__c</fullName>
    <formula>CC_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Zip</label>
    <type>Text</type>
</CustomField>