force-app/main/default/objects/Invoice__c/fields/Conditional_Waiver_created__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Waiver_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox flagged by Process Builder flow when a conditional waiver has been created for this Invoice-- to be used in &apos;Invoices Requiring Waiver&apos; list view</description>
    <label>Conditional Waiver created</label>
    <type>Checkbox</type>
</CustomField>