force-app/main/default/objects/Invoice__c/fields/Current_PDF_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_PDF_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Current PDF Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>