force-app/main/default/objects/Invoice__c/fields/Customer_satisfaction_obtained__c.field-meta.xml
<CustomField>
    <fullName>Customer_satisfaction_obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer satisfaction obtained</label>
    <type>Checkbox</type>
</CustomField>