force-app/main/default/objects/Invoice__c/fields/Customer_satisfaction_sent_delivered__c.field-meta.xml
<CustomField>
    <fullName>Customer_satisfaction_sent_delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer satisfaction sent/delivered</label>
    <type>Checkbox</type>
</CustomField>