force-app/main/default/objects/Invoice__c/fields/CustomerTaxGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerTaxGroup__c</fullName>
    <formula>Bill_To__r.Tax_Group__c</formula>
    <label>CustomerTaxGroup</label>
    <type>Text</type>
</CustomField>