force-app/main/default/objects/Invoice__c/fields/Due_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_New__c</fullName>
    <formula>Due_Date__c + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>