force-app/main/default/objects/Invoice__c/fields/Federal_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID__c</fullName>
    <defaultValue>&apos;33-0352215&apos;</defaultValue>
    <label>Federal ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>