force-app/main/default/objects/Invoice__c/fields/Finalized_By__c.field-meta.xml
<CustomField>
    <fullName>Finalized_By__c</fullName>
    <inlineHelpText>Name of the User who checked Final</inlineHelpText>
    <label>Finalized By</label>
    <length>32</length>
    <type>Text</type>
</CustomField>