force-app/main/default/objects/Invoice__c/fields/Finalized_By_is_current_user__c.field-meta.xml
<CustomField>
    <fullName>Finalized_By_is_current_user__c</fullName>
    <formula>IF(  Finalized_By__c  = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finalized By is current user</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>