force-app/main/default/objects/Invoice__c/fields/Finalized_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Finalized_By_Name__c</fullName>
    <label>Finalized By Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>