force-app/main/default/objects/Invoice__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this invoice will be synchronized with Timberline but not sent to customer.</inlineHelpText>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>