force-app/main/default/objects/Invoice__c/fields/Invoice_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Approved_Date_Time__c</fullName>
    <description>Field to stamp the date/time that an invoice is approved</description>
    <label>Invoice Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>