force-app/main/default/objects/Invoice__c/fields/Invoice_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Invoice_City_State_Zip__c</fullName>
    <formula>IF(ISBLANK(Care_of_Address_lookup__c),  Bill_To_Address3__r.Billing_City__c &amp; &quot;, &quot; &amp;  Bill_To_Address3__r.Billing_State__c &amp; &quot; &quot; &amp;  Bill_To_Address3__r.Billing_Zipcode__c,  Care_of_Address_lookup__r.Billing_City__c &amp; &quot;, &quot; &amp;  Care_of_Address_lookup__r.Billing_State__c &amp; &quot; &quot; &amp;  Care_of_Address_lookup__r.Billing_Zipcode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice City, State, Zip</label>
    <type>Text</type>
</CustomField>