force-app/main/default/objects/Invoice__c/fields/Invoice_creator_is_current_user__c.field-meta.xml
<CustomField>
    <fullName>Invoice_creator_is_current_user__c</fullName>
    <formula>IF((CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName = $User.FirstName+ &apos; &apos; + $User.LastName),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice creator is current user</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>