force-app/main/default/objects/Invoice__c/fields/Invoice_Number_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Incremental__c</fullName>
    <label>Invoice Number Incremental</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>