force-app/main/default/objects/Invoice__c/fields/Invoice_PD_on_job_is_current_user__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PD_on_job_is_current_user__c</fullName>
    <formula>IF((Project_Manager__c  = $User.FirstName+ &apos; &apos; + $User.LastName),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice PD on job is current user</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>