force-app/main/default/objects/Invoice__c/fields/Invoice_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Street_Address__c</fullName>
    <formula>IF(ISBLANK( Care_of_Address_lookup__c), Bill_To_Address3__r.Billing_Street__c , Care_of_Address_lookup__r.Billing_Street__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Street Address</label>
    <type>Text</type>
</CustomField>