force-app/main/default/objects/Invoice__c/fields/Invoice_Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted_Date_Time__c</fullName>
    <label>Invoice Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>