force-app/main/default/objects/Invoice__c/fields/Is_Dummy_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Dummy_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this invoice will not be synchronized with Timberline (dummy invoice).</inlineHelpText>
    <label>Pro forma</label>
    <type>Checkbox</type>
</CustomField>