force-app/main/default/objects/Invoice__c/fields/Is_Final__c.field-meta.xml
<CustomField>
    <fullName>Is_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked, the &quot;draft&quot; watermark is removed, and the invoice can no longer be modified. Invoice must be marked &quot;Final&quot; before it can be synchronized with Timberline.</inlineHelpText>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>