force-app/main/default/objects/Invoice__c/fields/Is_Forecast_Quick_Update_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Forecast_Quick_Update_Eligible__c</fullName>
    <formula>IF( 
OR( 
ISBLANK(ATI_Job__r.Last_Successful_Timberline_Update__c), 
((ATI_Job__r.Last_Successful_Timberline_Update__c+0.002) &lt; LastModifiedDate), 
((ATI_Job__r.Last_Successful_Timberline_Update__c+0.002) &lt; ATI_Job__r.LastModifiedDate) ), 
&quot;true&quot;, 
&quot;false&quot; )</formula>
    <label>Is Forecast Quick Update Eligible</label>
    <type>Text</type>
</CustomField>