force-app/main/default/objects/Invoice__c/fields/Job_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Completion_Date__c</fullName>
    <formula>ATI_Job__r.Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Completion Date</label>
    <type>Date</type>
</CustomField>