force-app/main/default/objects/Invoice__c/fields/Last_Successful_Timberline_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Timberline_Sync__c</fullName>
    <label>Last Successful Timberline Sync</label>
    <type>DateTime</type>
</CustomField>