force-app/main/default/objects/Invoice__c/fields/MapAccountBack__c.field-meta.xml
<CustomField>
    <fullName>MapAccountBack__c</fullName>
    <description>This is for deployment so we can map the account back to invoice when there is no master account.</description>
    <formula>Bill_To__r.Name +  Bill_To__r.Account_Address__c</formula>
    <label>MapAccountBack</label>
    <type>Text</type>
</CustomField>