force-app/main/default/objects/Invoice__c/fields/MapAccountBackBillToCC__c.field-meta.xml
<CustomField>
    <fullName>MapAccountBackBillToCC__c</fullName>
    <description>Deployment, map Bill to CC account to invoice, no master</description>
    <formula>CC_Account__r.Account_Name_and_Address__c</formula>
    <label>MapAccountBackBillToCC</label>
    <type>Text</type>
</CustomField>