force-app/main/default/objects/Invoice__c/fields/MapAccountBackCareOf__c.field-meta.xml
<CustomField>
    <fullName>MapAccountBackCareOf__c</fullName>
    <description>deployment, map care of account back to invoice, no master account.</description>
    <formula>Care_Of__r.Account_Name_and_Address__c</formula>
    <label>MapAccountBackCareOf</label>
    <type>Text</type>
</CustomField>