force-app/main/default/objects/Invoice__c/fields/MapAccountBackCareOfCC__c.field-meta.xml
<CustomField>
    <fullName>MapAccountBackCareOfCC__c</fullName>
    <description>deployment, map back Care Of CC account to invoice, no master</description>
    <formula>CC_CareOf__r.Account_Name_and_Address__c</formula>
    <label>MapAccountBackCareOfCC</label>
    <type>Text</type>
</CustomField>