force-app/main/default/objects/Invoice__c/fields/MapMasterAccountBack__c.field-meta.xml
<CustomField>
    <fullName>MapMasterAccountBack__c</fullName>
    <description>This is for deployment to map account back to invoice when there is a master account.</description>
    <formula>Bill_To__r.Master_Account__c +  Bill_To__r.Account_Address__c</formula>
    <label>MapMasterAccountBack</label>
    <type>Text</type>
</CustomField>