force-app/main/default/objects/Invoice__c/fields/MapMasterAccountBackBillToCC__c.field-meta.xml
<CustomField>
    <fullName>MapMasterAccountBackBillToCC__c</fullName>
    <description>deployment, bill to cc account map back to invoice, master account.</description>
    <formula>CC_Account__r.Master_Account__c +  CC_Account__r.Account_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MapMasterAccountBackBillToCC</label>
    <type>Text</type>
</CustomField>