force-app/main/default/objects/Invoice__c/fields/MapMasterAccountBackCareOf__c.field-meta.xml
<CustomField>
    <fullName>MapMasterAccountBackCareOf__c</fullName>
    <description>deployment, map Care Of account back to invoice, master.</description>
    <formula>Care_Of__r.Master_Account__c +  Care_Of__r.Account_Address__c</formula>
    <label>MapMasterAccountBackCareOf</label>
    <type>Text</type>
</CustomField>