force-app/main/default/objects/Invoice__c/fields/MapMasterAccountBackCareOfCC__c.field-meta.xml
<CustomField>
    <fullName>MapMasterAccountBackCareOfCC__c</fullName>
    <description>deployment, map Care Of CC account back to invoice, master.</description>
    <formula>CC_CareOf__r.Master_Account__c +  CC_CareOf__r.Account_Address__c</formula>
    <label>MapMasterAccountBackCareOfCC</label>
    <type>Text</type>
</CustomField>