force-app/main/default/objects/Invoice__c/fields/MTD_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>MTD_Work_Billed__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>