force-app/main/default/objects/Invoice__c/fields/Net_Due__c.field-meta.xml
<CustomField>
    <fullName>Net_Due__c</fullName>
    <formula>((Total_Costs_Per_Contract__c  +  Total_Tax__c) - retainage_amount__c)- Total_Credits__c -  Payment_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Costs on Contract + Tax less Retainage - Amounts Received - Payments/ Adjustments</inlineHelpText>
    <label>Net Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>