force-app/main/default/objects/Invoice__c/fields/Omit_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Omit_Bill_To__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate that the user does not want the Bill To Account Name to show up on the Invoice PDF</description>
    <label>Overwrite Bill To</label>
    <type>Checkbox</type>
</CustomField>