force-app/main/default/objects/Invoice__c/fields/Payment_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Adjustment__c</fullName>
    <label>Payment / Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>